<resources>
    <string name="app_name">LayananQta</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="password">Password</string>
    <string name="nohp">Nomor HP</string>
    <string name="repassword">Ulangi Password</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="disini">&#160;Disini</string>
    <string name="sudahdaftar">Sudah pernah daftar? Login</string>
    <string name="belumdaftar">Belum pernah daftar? Daftar</string>
    <string name="next">Next</string>
    <string name="kota">Kota</string>
    <string name="profesi">Profesi</string>
    <string name="deskripsi_pengalaman">Deskripsi Pengalaman</string>
    <string name="lama_kerja">Durasi Pengalaman</string>
    <string name="daftar_menjadi_freelancer">Daftar Menjadi Freelancer</string>
    <string name="ganti_foto">Ganti Foto</string>
    <string name="sebelum_ketahap_selanjutnya">Sebelum ke tahap selanjutnya, yuk isi data diri kamu terlebih dahulu!</string>
    <string name="isi_data_diri">Isi Data Diri</string>
    <string name="menunggu_persetujuan_admin">MENUNGGU PERSETUJUAN ADMIN</string>
    <string name="aktif">Active</string>
    <string name="nonaktif">Nonactive</string>
    <string name="ganti">Ganti</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="logo">Logo</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="password_saat_ini">Password Saat Ini</string>
    <string name="hubungi">Hubungi</string>
    <string name="hapus_foto">Hapus Foto</string>
    <string name="status">STATUS :</string>
    <string name="tahun"> Tahun</string>
    <string name="temukan_orang">Temukan orang yang bisa meringankan pekerjaanmu!</string>
    <string name="bantu_orang">Bantu orang untuk mendapatkan penghasilan!</string>
    <string name="belum_ada_daftar_freelancer">Belum Ada Daftar Freelancer, ayo daftar Sekarang!</string>
    <string name="cari_berdasarkan_profesi">Cari Berdasarkan Profesi</string>
    <string name="detail_freelancer">Detail Freelancer</string>
    <string name="hubungi_melalui_whatsapp">Hubungi Melalui WhatsApp</string>
    <string name="hubungi_melalui_telepon">Hubungi Melalui Telepon</string>
    <string name="hubungi_melalui_email">Hubungi Melalui Email</string>
    <string name="no">NO</string>
    <string name="nama">Nama</string>

    //warning
    <string name="nama_kosong">Nama lengkap tidak boleh kosong</string>
    <string name="email_kosong">Email tidak boleh kosong</string>
    <string name="nohp_kosong">Nomor tidak boleh kosong</string>
    <string name="pass_kosong">Password tidak boleh kosong</string>
    <string name="pass_tidak_cocok">Password tidak cocok</string>

</resources>
